v0.19.0/_sources/external_resources.md.txt
# External Resources

Below is a curated collection of external PyGMT resources.

*To add your contribution to this collection, follow [these instructions](contributing.md#contributing-documentation)
to submit a pull request with your recommended addition to the
[External Resources file](https://github.com/GenericMappingTools/pygmt/blob/main/doc/external_resources.md).*

---

## Tutorials

:::::{grid} 1 2 2 3

::::{grid-item-card} 2024 AGU PREWS9: Mastering Geospatial Visualizations with GMT/PyGMT
:link: https://www.generic-mapping-tools.org/agu24workshop/
:text-align: center
:margin: 0 3 0 0

![](https://github.com/user-attachments/assets/9f3ab0ed-83f1-4cff-bc68-387fc13ca61f)
+++
Wei Ji Leong, Yvonne Fröhlich, Jing-Hui Tong, Federico Esteban, Max Jones, Andre Belem
::::

::::{grid-item-card} 2024 PyGMT Webinar using Google Colab (in Portuguese)
:link: https://github.com/andrebelem/Oficina_PyGMT
:text-align: center
:margin: 0 3 0 0

![](https://github.com/andrebelem/Oficina_PyGMT/raw/main/Datasets/3D_sample.png)
+++
Andre Belem
::::

::::{grid-item-card} 2022 EGU SC5.2: Crafting beautiful maps with PyGMT
:link: https://www.generic-mapping-tools.org/egu22pygmt/
:text-align: center
:margin: 0 3 0 0

![](https://user-images.githubusercontent.com/3974108/171653272-efaceeb1-a253-44a1-bddc-36bc9498c19b.png)
+++
Wei Ji Leong, Leonardo Uieda, Max Jones, Andre Belem
::::

::::{grid-item-card} 2021 PyGMT course at the UAF Geophysical Institute
:link: https://github.com/liamtoney/gi-pygmt-2021
:text-align: center
:margin: 0 3 0 0

![](https://user-images.githubusercontent.com/3974108/172042115-3f700c16-0f78-49d3-9e8d-87c77e4c0444.png)
+++
Liam Toney
::::

::::{grid-item-card} 2021 Remote Online Sessions for Emerging Seismologists (ROSES): Unit 5 - Mapping
:link: https://www.youtube.com/watch?v=Zvcy7VDuhiw
:text-align: center
:margin: 0 3 0 0

![](https://user-images.githubusercontent.com/3974108/172055872-b81057b6-aef3-473f-8f42-1cc82a68d188.jpg)
+++
Liam Toney
::::

::::{grid-item-card} 2020 Remote Online Sessions for Emerging Seismologists (ROSES): Unit 8 - PyGMT
:link: https://www.iris.edu/hq/inclass/lesson/728
:text-align: center
:margin: 0 3 0 0

![](https://user-images.githubusercontent.com/3974108/172055922-8df68c00-4115-42f4-83ae-13a971fef846.png)
+++
Liam Toney
::::

::::{grid-item-card} PyGMT Tutorial in 2021
:link: https://github.com/MIGG-NTU/PyGMT2021
:text-align: center
:margin: 0 3 0 0

![](https://user-images.githubusercontent.com/23487320/172058757-9b68f7ae-7a3f-4f48-9df6-9a065d6cd448.png)
+++
MIGG-NTU
::::

::::{grid-item-card} PyGMT Workshop at FOSS4G Oceania 2019
:link: https://github.com/GenericMappingTools/foss4g2019oceania
:text-align: center
:margin: 0 3 0 0

![](https://github.com/GenericMappingTools/foss4g2019oceania/releases/download/v1/picton_3d_dsm_view.png)
+++
Wei Ji Leong
::::

::::{grid-item-card} Crafting 3D maps of Antarctica with PyGMT and the IBCSO V2
:link: https://github.com/andrebelem/3D-Antarctic-maps
:text-align: center
:margin: 0 3 0 0

![](https://github.com/andrebelem/3D-Antarctic-maps/raw/main/3D-Antarctic-Maps.png)
+++
Andre Belem
::::

::::{grid-item-card} Planetary Maps (in PyGMT)
:link: https://github.com/andrebelem/PlanetaryMaps
:text-align: center
:margin: 0 3 0 0

![](https://github.com/andrebelem/MarsMaps/raw/main/JezeroCrater.png)
+++
Andre Belem
::::

::::{grid-item-card} PyGMT-HOWTO
:link: https://tktmyd.github.io/pygmt-howto-jp/
:text-align: center
:margin: 0 3 0 0

![](https://github.com/tktmyd/pygmt-howto-jp/raw/main/src/basics/fig/pygmt-coastline.png)
+++
Takuto Maeda
::::

:::::

## Examples from Publications and Posters

:::::{grid} 1 2 2 3

::::{grid-item-card} GMT and PyGMT plotting examples
:link: https://github.com/michaelgrund/GMT-plotting
:text-align: center
:margin: 0 3 0 0

![](https://user-images.githubusercontent.com/3974108/172055991-c0646f6c-d130-474f-b46a-5587483998cb.jpg)
+++
Michael Grund
::::

::::{grid-item-card} NZ Antarctic Science Conference 2021 poster
:link: https://github.com/weiji14/nzasc2021
:text-align: center
:margin: 0 3 0 0

![](https://user-images.githubusercontent.com/23487320/107176140-6aa4e580-6a33-11eb-8f30-1a7913788d6c.png)
+++
Wei Ji Leong
::::

::::{grid-item-card} PyGMT plotting examples
:link: https://github.com/yvonnefroehlich/gmt-pygmt-plotting
:text-align: center
:margin: 0 3 0 0

![](https://github.com/yvonnefroehlich/gmt-pygmt-plotting/raw/main/_images/github_maps_readme_main.png)
+++
Yvonne Fröhlich
::::

:::::
